# bitdoze_bot

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  bitdoze-bot.service  config.example.yaml  config.yaml  docker-compose.yml  index.html  main.py  pyproject.toml
bitdoze_bot/: __init__.py  agents.py  bridge_tools.py  cognee.py  cognee_tools.py  collab_tools.py  compat_tools.py  config.py  cron.py  discord_bot.py  discord_runtime_utils.py  discord_tool_fallback.py  discovery_tools.py  embedder.py  heartbeat.py  logging_setup.py  run_monitor.py  setup_wizard.py  task_store.py  task_tools.py  tool_permissions.py  utils.py
scripts/: generate_soul.py  setup_bot.py  setup_knowledge.py
skills/docker-deploy/: SKILL.md
skills/web-research/: SKILL.md
tests/: test_agents_registry.py  test_bridge_tools.py  test_cognee.py  test_collab_tools.py  test_compat_tools.py  test_config_paths.py  test_cron.py  test_discovery_tools.py  test_embedder.py  test_heartbeat.py  test_logging_setup.py  test_main_home_layout.py  test_research_mode.py  test_routing_and_observability.py  test_run_monitor.py  test_setup_wizard.py  test_task_store.py  test_task_tools.py  test_tool_permissions.py  test_tool_permissions_runtime_paths.py  test_toolcall_fallback.py  test_utils.py
workspace/: AGENTS.md  CRON.yaml  HEARTBEAT.md  MEMORY.md  USER.md  script.js  styles.css
workspace/memory/: 2026-02-03.md  2026-02-04.md
workspace/specifications/: README.md  simple-website-spec.md
workspace/tasks/: README.md  board.v2.schema.json  board.yaml
workspace/team/: README.md
(+10 files in other folders)
